jar Paper.jar angepasst

--- a/jar/paper.jar.conf
+++ b/jar/paper.jar.conf
@@ -4,7 +4,7 @@ name = PaperMc
 
 source = https://papermc.io/api/v2/projects/paper/versions/1.17.1/builds/120/downloads/paper-1.17.1-120.jar
 
-# configSource = http://www.multicraft.org/download/conf/?file=craftbukkit.jar.conf
+configSource = https://raw.githubusercontent.com/nicolai-m/multicraft/main/jar/paper.jar.conf
 
 #safeConfSections = ^(encoding|commands|parse_.+)$
 
