--- a/jar/java8.jar.conf
+++ b/jar/java8.jar.conf
@@ -20,7 +20,7 @@ name = Java8
 ## source = http://www.multicraft.org/download/jar/?file=craftbukkit&version=latest&client=multicraft
 ## Where to download this file from (will overwrite this file with the
 ## downloaded one)
-## configSource = http://www.multicraft.org/download/conf/?file=craftbukkit.jar.conf
+configSource = https://raw.githubusercontent.com/nicolai-m/multicraft/main/jar/java8.jar.conf
 ## Sections of this file that may be overridden by .conf files in the server
 ## directory
 #safeConfSections = ^(encoding|commands|parse_.+)$
