Change RAM caching

--- a/jar/java8.jar.conf
+++ b/jar/java8.jar.conf
@@ -11,7 +11,7 @@ category = Mods
 [encoding]
 
 [start]
-command = "/usr/lib/jvm/adoptopenjdk-8-hotspot-amd64/bin/java" -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=15 -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui
+command = "/usr/lib/jvm/adoptopenjdk-8-hotspot-amd64/bin/java" -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -XX:+UnlockExperimentalVMOptions -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=15 -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui
 
 
 [settings]
