--- a/jar/paper.jar.conf
+++ b/jar/paper.jar.conf
@@ -1,8 +1,8 @@
 [config]
 
-name = PaperMc
+name = PaperMc 123
 
-source = https://papermc.io/api/v2/projects/paper/versions/1.18.1/builds/155/downloads/paper-1.18.1-166.jar
+source = https://papermc.io/api/v2/projects/paper/versions/1.18.1/builds/155/downloads/paper-1.18.1-155.jar
 
 configSource = https://raw.githubusercontent.com/nicolai-m/multicraft/main/jar/paper.jar.conf
 
