--- a/jar/paper.jar.conf
+++ b/jar/paper.jar.conf
@@ -1,6 +1,6 @@
 [config]
 
-name = PaperMc 123
+name = PaperMc
 
 source = https://papermc.io/api/v2/projects/paper/versions/1.18.1/builds/155/downloads/paper-1.18.1-155.jar
 
