PapaerMC = Default java path

--- a/jar/paper.jar.conf
+++ b/jar/paper.jar.conf
@@ -15,9 +15,8 @@ category = Mods
 #encode = system
 
 [start]
-#command = "{JAVA}" -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui
-command = "/usr/lib/jvm/jdk-17/bin/java" -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui
-
+command = "{JAVA}" -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui
+#command = "/usr/lib/jvm/jdk-17/bin/java" -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui
 
 [settings]
 
