--- a/jar/paper.jar.conf
+++ b/jar/paper.jar.conf
@@ -2,7 +2,10 @@
 
 name = PaperMc
 
-source = https://papermc.io/api/v2/projects/paper/versions/1.18.2/builds/237/downloads/paper-1.18.2-237.jar
+#
+#
+#
+source = https://api.papermc.io/v2/projects/paper/versions/1.19.2/builds/185/downloads/paper-1.19.2-185.jar
 
 configSource = https://raw.githubusercontent.com/nicolai-m/multicraft/main/jar/paper.jar.conf
 
